# mcp-codebase-insight

./: .bumpversion.cfg  .codecov.yml  .coverage  .coverage.Mac.attlocal.net.59540.XujFRCtx  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  PRE_RELEASE_CHECKLIST.md  PR_SUMMARY.md  PULL_REQUEST.md  README.md  RELEASE_NOTES.md  SECURITY_AUDIT_REPORT.md  TESTING_GUIDE.md  async_fixture_wrapper.py  bandit-report.json  codebase_structure.txt  component_test_runner.py  core_workflows.txt  create_release_issues.sh  debug_tests.md  error_logs.txt  github-actions-documentation.md  output.txt  package-lock.json  package.json  prepare_codebase.sh  pyproject.toml  pytest.ini  requirements-3.11.txt.backup  requirements-3.12.txt  requirements-dev.txt  requirements-updated.txt  requirements.in  requirements.txt  (+17 more)
.compile-venv-py3.11/: pyvenv.cfg
.github/: copilot-instructions.md
.github/agents/: DebugAgent.agent.md  DocAgent.agent.md  README.md  TestAgent.agent.md  VectorStoreAgent.agent.md
.github/workflows/: build-verification.yml  ci-cd.yml  publish.yml  tdd-verification.yml
docs/: README.md  SSE_INTEGRATION.md  api.md  cookbook.md  documentation_map.md  documentation_summary.md  qdrant_setup.md  testing_guide.md  vector_store_best_practices.md
docs/adrs/: 001_use_docker_for_qdrant.md
docs/components/: README.md
docs/development/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/features/: adr-management.md  code-analysis.md  documentation.md
docs/getting-started/: configuration.md  docker-setup.md  installation.md  qdrant_setup.md  quickstart.md  uvx_installation.md
docs/system_architecture/: README.md
docs/templates/: adr.md
docs/troubleshooting/: common-issues.md  faq.md
docs/workflows/: README.md
examples/: use_with_claude.py
module_summaries/: backend_summary.txt  database_summary.txt  frontend_summary.txt
public/: robots.txt  sitemap.xml
qdrant_data/: raft_state.json
qdrant_data/collections/codebase_patterns/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/codebase_patterns/0/segments/2204ab82-5b68-4e4d-ad1d-abd69f445811/: 000009.sst  000011.sst  000019.sst  000021.sst  000023.sst  000025.sst  000037.sst  000039.sst  000041.sst  000043.sst  000045.sst  000047.sst  000049.sst  000051.sst  000059.sst  000061.sst  IDENTITY  LOG  MANIFEST-000065  segment.json
qdrant_data/collections/codebase_patterns/0/segments/3c47efbb-e6e7-4244-beb6-4f8df83d9404/: LOG  (+17 more)
qdrant_data/collections/mcp-codebase-insight/0/: newest_clocks.json
qdrant_data/collections/test_collection_11025589/: config.json
qdrant_data/collections/test_collection_1743382669/0/: newest_clocks.json
qdrant_data/collections/test_collection_2748c1a6/0/: newest_clocks.json
qdrant_data/collections/test_collection_42f664d2/0/: newest_clocks.json
qdrant_data/collections/test_collection_438d4bac/0/: newest_clocks.json
qdrant_data/collections/test_collection_82c13c6c/0/: newest_clocks.json
scripts/: README.md  check_qdrant_health.sh  compile_requirements.sh  load_example_patterns.py  macos_install.sh  setup_qdrant.sh  start_mcp_server.sh  store_code_relationships.py  store_report_in_mcp.py  validate_knowledge_base.py  validate_poc.py  validate_vector_store.py  verify_build.py
src/components/about/: AboutPage.tsx
src/components/admin/: ActivityLogModal.tsx  AdminMenu.tsx  AdminPanel.tsx  Analytics.tsx  Dashboard.tsx  ExternalLinkEditForm.tsx  ExternalLinkForm.tsx  ExternalLinkTable.tsx  ManageEvents.tsx  ManageLinks.tsx  PasswordResetModal.tsx  ProfileSettingsModal.tsx  SecuritySettingsModal.tsx  UserManagement.tsx
src/components/auth/: AuthForm.tsx  AuthGuard.tsx
src/components/community/: CommunityPage.tsx
src/components/contact/: ContactPage.tsx
src/components/contribute/: ChallengeCard.tsx  CollaborationBoard.tsx  ContributePage.tsx  ProjectCard.tsx
src/components/home/: Hero.tsx  LearningPaths.tsx  TechEvents.tsx
src/components/learn/: CertificationTrack.tsx  LearnPage.tsx  LearningPathCard.tsx  LearningPathPage.tsx  LessonPage.tsx  SkillAssessment.tsx
src/components/network/: NetworkPage.tsx
src/components/portfolio/: CollaborationCard.tsx  HelpRequest.tsx  PortfolioAssessment.tsx  PortfolioPage.tsx  ProjectCard.tsx  README.md  SkillCard.tsx
src/components/portfolio/__tests__/: SkillCard.test.tsx
src/components/shared/: ExternalLinkDisplay.tsx
src/components/ui/: Navigation.tsx
src/contexts/: AuthContext.tsx
src/mcp_codebase_insight/: __init__.py  __main__.py  asgi.py  models.py  server.py  server_test_isolation.py  version.py
src/mcp_codebase_insight/core/: __init__.py  adr.py  cache.py  component_status.py  config.py  debug.py  di.py  documentation.py  embeddings.py  errors.py  health.py  knowledge.py  metrics.py  prompts.py  sse.py  state.py  task_tracker.py  tasks.py  vector_store.py
src/mcp_codebase_insight/mcp_server_qdrant/: __init__.py  __main__.py  main.py  server.py
src/mcp_codebase_insight/mcp_server_qdrant/core/: __init__.py  adr.py  cache.py  config.py  debug.py  documentation.py  embeddings.py  errors.py  health.py  knowledge.py  metrics.py  prompts.py  tasks.py  vector_store.py
src/mcp_codebase_insight/mcp_server_qdrant/utils/: __init__.py  logger.py
src/mcp_codebase_insight/utils/: __init__.py  logger.py
tests/: README.md  README.test.md  conftest.py  test_api_endpoints.py  test_build_verifier.py  test_core_components.py  test_file_relationships.py  test_server.py
tests/components/: conftest.py  test_embeddings.py  test_knowledge_base.py  test_sse_components.py  test_stdio_components.py  test_task_manager.py  test_vector_store.py
tests/config/: test_config_and_env.py
tests/integration/: fixed_test2.py  test_api_endpoints.py  test_api_endpoints.py-e  test_communication_integration.py  test_server.py
trajectories/tosinakinosho/anthropic_filemap__claude-3-sonnet-20240229__t-0.00__p-1.00__c-3.00___db62b9/db62b9/: config.yaml
trajectories/tosinakinosho/default__claude-3-5-sonnet-20240620__t-0.00__p-1.00__c-3.00___03565e/03565e/: 03565e.traj  config.yaml
(+516 files in other folders)
